# weather-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/weather_pipeline/: config.py  pipeline.py
src/weather_pipeline/ingestion/: __init__.py  base.py  noaa_nexrad.py
src/weather_pipeline/processing/: __init__.py  schemas.py  transformers.py
src/weather_pipeline/storage/: __init__.py  local.py
tests/: conftest.py  test_processing.py  test_storage.py
